cluster/apps/hotrod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotrod
  labels:
    name: hotrod
